Change immersive prep submit test

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "test:underbar": "jest underbar-review/",
     "test:watch": "jest --watch",
     "test:circleci": "jest --json --outputFile=.circleci/results.json",
-    "lint": "eslint **/*.js --quiet"
+    
+    "lint": "eslint **/*.js --quiet",
+    "check": "node .airci/submit.js",
+    "submit-test": "node __test__/getReview && mocha server/spec/server-spec.js --reporter reporter.js --exit",
+    "submit": "npm-run-all -c -s --silent submit-test check"
+
   },
   "keywords": [
     "linter",
