--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "test:recursion": "jest recursion-review/",
     "test:underbar": "jest underbar-review/",
     "test:watch": "jest --watch",
-    "test:circleci": "jest --json --outputFile=.circleci/results.json",
-    
     "lint": "eslint **/*.js --quiet",
+    "submit-test": "jest --json --outputFile=result.json",
     "check": "node .airci/submit.js",
-    "submit-test": "node __test__/getReview && mocha server/spec/server-spec.js --reporter reporter.js --exit",
     "submit": "npm-run-all -c -s --silent submit-test check"
 
   },
