--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,9 @@
 {
-    "extends": "eslint:recommended",
-    "env": {
-        "node": true,
-        "es6": true,
-        "jest": true
-    },
-    "rules": {
-    }
+  "extends": "eslint:recommended",
+  "env": {
+    "node": true,
+    "es6": true,
+    "jest": true
+  },
+  "rules": {}
 }
