--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "test:passme": "jest pass-me/",
     "test:watch": "jest --watch",
     "lint": "eslint **/*.js --quiet",
-    "submit-test": "jest --json --outputFile=result.json",
-    "check": "node .airci/submit.js",
-    "submit": "npm-run-all -c -s --silent submit-test check"
+    "submit-test": "jest --json --outputFile=result.json"
   },
   "keywords": [
     "linter",
@@ -22,6 +20,7 @@
   "author": "codesatates",
   "dependencies": {},
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "eslint": "^6.8.0",
+    "jest": "^25.1.0"
   }
 }
