--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:passme": "jest pass-me/",
     "test:watch": "jest --watch",
     "lint": "eslint **/*.js --quiet",
-    "submit-test": "jest --json --outputFile=result.json"
+    "submit": "node .travis/submit.js"
   },
   "keywords": [
     "linter",
