--- a/package.json
+++ b/package.json
@@ -19,8 +19,5 @@
   ],
   "author": "codesatates",
   "dependencies": {},
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "jest": "^25.1.0"
-  }
+  "devDependencies": {}
 }
